force-app/main/default/objects/EntregableComunicacion__c/fields/Comunicacion__c.field-meta.xml
<CustomField>
    <fullName>Comunicacion__c</fullName>
    <label>Comunicación</label>
    <referenceTo>Comunicacion__c</referenceTo>
    <relationshipLabel>Grupos Entregables Relacionados</relationshipLabel>
    <relationshipName>EntregablesRelacionados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>