force-app/main/default/objects/EntregableComunicacion__c/fields/Entregable_del__c.field-meta.xml
<CustomField>
    <fullName>Entregable_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Entregables</label>
    <referenceTo>Entregable__c</referenceTo>
    <relationshipLabel>Comunicaciones Relacionadas</relationshipLabel>
    <relationshipName>ComunicacionesRelacionadas_del</relationshipName>
    <type>Lookup</type>
</CustomField>