force-app/main/default/objects/EntregableComunicacion__c/fields/Fecha_Recepcion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Recepcion__c</fullName>
    <formula>Comunicacion__r.Fecha_de_Recepcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Recepción</label>
    <type>Date</type>
</CustomField>